# fpathlib

./: LICENSE  README.md  TODO.txt  pyproject.toml
docs/source/: conf.py  index.rst
scripts/: deploy.sh  docs.sh  pypi.sh  tag.sh
src/fpathlib/: __init__.py  _version.py  path.py  utils.py
src/fpathlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fpathlib/ext/: __init__.py  polars.py  polars.py~
src/metapath/: __init__.py  path.py
tests/: test_path.py  test_polars.py
